Fix dropdown navigation on small screens

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -174,7 +174,7 @@ td, th { padding: 0; }
 
 .pure-button::-moz-focus-inner { padding: 0; border: 0; }
 
-.pure-button { font-family: inherit; font-size: 100%; padding: .5em 1em; color: #444; color: rgba(0, 0, 0, 0.8); border: 1px solid #999; border: 0 transparent; background-color: #E6E6E6; text-decoration: none; border-radius: 2px; }
+.pure-button { font-family: inherit; font-size: 100%; padding: .5em 1em; color: #444; color: rgba(0, 0, 0, 0.8); border: 1px solid #999; border: 0 rgba(0, 0, 0, 0); background-color: #E6E6E6; text-decoration: none; border-radius: 2px; }
 
 .pure-button-hover, .pure-button:hover, .pure-button:focus { filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#1a000000', GradientType=0); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(40%, rgba(0, 0, 0, 0.05)), to(rgba(0, 0, 0, 0.1))); background-image: -webkit-linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1)); background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.05) 0, rgba(0, 0, 0, 0.1)); background-image: -o-linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1)); background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1)); }
 
@@ -774,7 +774,7 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 
 a.pure-menu-link:hover { text-decoration: none; }
 
-.pure-menu-allow-hover:hover > .pure-menu-children, .pure-menu-active > .pure-menu-children { top: 56px; left: auto; right: 0; text-align: right; min-width: 146px; background-color: #FDFDFD; }
+.pure-menu-allow-hover:hover > .pure-menu-children, .pure-menu-active > .pure-menu-children { top: 56px; left: auto; right: 0; text-align: left; min-width: 146px; background-color: #FDFDFD; }
 
 .pure-menu-link { color: #144b92; }
 
@@ -787,7 +787,8 @@ a.pure-menu-link:hover { text-decoration: none; }
   #menuIcon > svg path { fill: #424242; }
   .site-nav { text-align: left; margin-top: 20px; right: 18px; position: relative; margin-bottom: 10px; right: 0; width: 100%; margin-top: 0; top: 0px; }
   .pure-menu { clear: both; display: none; position: relative; padding-bottom: 20px; }
-  .pure-menu-has-children.isOpen > .pure-menu-link:after { content: "\25BE"; }
+  .pure-menu-allow-hover:hover > .pure-menu-children, .pure-menu-active > .pure-menu-children { position: unset; }
+  .pure-menu-has-children.pure-menu-active > .pure-menu-link:after { content: "\25BE"; }
   .pure-menu-children { display: none; left: 0; position: relative; margin-left: 20px; }
   .pure-menu-children.show-children { display: block; }
   .page-link { display: block; padding: 5px 10px; } }
